--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             }
             .container {
                 height: 100vh;
-                background: url('background.jpg');
+                background: url('background2.jpg');
                 background-size: cover;
                 display:flex;
                 justify-content: center;
